Added prescription templates ui